Spacing edited to resolve errors

--- a/main.css
+++ b/main.css
@@ -3,6 +3,7 @@
     width: 360px;
     padding: 8% 0 0;
     margin: auto;
+
 }
 .form {
     position: relative;
@@ -88,7 +89,7 @@
     color: #EF3B3A;
 }
 body {
-    background-image: url("img.jpg");
+    background-image: url("img2.jpg");
     background-size: cover;
     background-repeat: no-repeat;
     font-family: "Roboto", sans-serif;
@@ -96,9 +97,3 @@ body {
     -moz-osx-font-smoothing: grayscale;
 
 }
-
-
-
-
-
-
